--- a/Documents/TMDb/package.json
+++ b/Documents/TMDb/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/http": "^4.19.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
+    "@ionic-native/youtube-video-player": "^4.19.0",
     "@ionic/pro": "2.0.4",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.4",
@@ -35,6 +36,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-youtube-video-player": "2.3.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -56,7 +58,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-youtube-video-player": {}
     },
     "platforms": [
       "android"
